Changed font to Lusitana.

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -7,7 +7,7 @@ $light-0: #FFFFFF;
 
 html, body {
     background-color: $light-0;
-    font-family: 'Josefin Sans', sans-serif;
+    font-family: 'Lusitana', serif;
     height: 100vh;
     margin: 0;
 }
@@ -39,7 +39,7 @@ html, body {
 .title {
     color: $primary-80;
     font-size: 84px;
-    font-weight: 100;
+    font-weight: 400;
 }
 
 .m-b-md {
