--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,1 +1,45 @@
-body,html{background-color:#fff;font-family:Josefin Sans,sans-serif;margin:0}.full-height,body,html{height:100vh}.flex-center{-webkit-box-align:center;align-items:center;display:-webkit-box;display:flex;-webkit-box-pack:center;justify-content:center}.position-ref{position:relative}.top-right{position:absolute;right:10px;top:18px}.content{text-align:center}.title{color:#f74553;font-size:84px;font-weight:100}.m-b-md{margin-bottom:30px}
+html,
+body {
+  background-color: #FFFFFF;
+  font-family: 'Lusitana', serif;
+  height: 100vh;
+  margin: 0;
+}
+
+.full-height {
+  height: 100vh;
+}
+
+.flex-center {
+  -webkit-box-align: center;
+          align-items: center;
+  display: -webkit-box;
+  display: flex;
+  -webkit-box-pack: center;
+          justify-content: center;
+}
+
+.position-ref {
+  position: relative;
+}
+
+.top-right {
+  position: absolute;
+  right: 10px;
+  top: 18px;
+}
+
+.content {
+  text-align: center;
+}
+
+.title {
+  color: #F74553;
+  font-size: 84px;
+  font-weight: 400;
+}
+
+.m-b-md {
+  margin-bottom: 30px;
+}
+
